# dynaminator

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  Dockerfile  README.md  docker-compose.test.local.yml  docker-compose.test.yml  docker-compose.yml  run.dev.sh  run.sh
app/: CMakeLists.txt  main.cpp  main_gui.cpp
app/docs/: Doxyfile
app/docs/sphinx/: conf.py  index.rst
app/include/: BPRNetwork.hpp  ConvexSolver.hpp  Dijkstra.hpp  FrankWolfe.hpp  GlobalState.hpp  GoldenSectionSolver.hpp  Graph.hpp  IntervalSolver.hpp  ShortestPathOneMany.hpp  StaticDemand.hpp  StaticNetwork.hpp  StaticProblem.hpp  StaticSolution.hpp  cuda.hpp
app/include/Alg/: Alg.hpp  BinaryHeap.hpp  Graph.hpp  PriorityQueue.hpp
app/include/Alg/Flow/: EdmondsKarp.hpp  Flow.hpp  MaxFlow.hpp
app/include/Alg/ShortestPath/: BFS.hpp  Dijkstra.hpp  DijkstraMany.hpp  ShortestPath.hpp  ShortestPathManyMany.hpp  ShortestPathOneMany.hpp  ShortestPathOneOne.hpp
app/include/Com/: Com.hpp  HTTPServer.hpp  Message.hpp  MessageFactory.hpp  RawSocket.hpp  RunFWSimulation.hpp  Server.hpp  Socket.hpp  WebSocketServer.hpp
app/include/Dynamic/: Demand.hpp  Dynamic.hpp  Environment.hpp  Environment_Events.hpp  Environment_Loader.hpp  Network.hpp  SUMOAdapter.hpp  Vehicle.hpp
app/include/Dynamic/Demand/: Demand.hpp  PoissonDemandLoader.hpp  UniformDemandLoader.hpp
app/include/Dynamic/Env/: Connection.hpp  Edge.hpp  Env.hpp  Events.hpp  Lane.hpp  Loader.hpp  Node.hpp  Position.hpp  TAZ.hpp  TrafficLight.hpp  Vehicle.hpp
app/include/Dynamic/Policy/: Action.hpp  DoubleQLearner.hpp  PathPolicy.hpp  Policy.hpp  QLearner.hpp  RandomPolicy.hpp
app/include/Geo/: Coord.hpp
app/include/Log/: ProgressLogger.hpp  ProgressLoggerIgnore.hpp  ProgressLoggerJsonOStream.hpp  ProgressLoggerTableOStream.hpp
app/include/Opt/: GeneticIntervalSolver.hpp  GeneticSolver.hpp  GoldenSectionSolver.hpp  IntervalSolver.hpp  QuadraticGuessSolver.hpp  QuadraticSolver.hpp  SolverWithInitialSolutions.hpp  UnivariateSolver.hpp
app/include/REST/: REST.hpp  Server.hpp
app/include/Static/: Demand.hpp  FixedSolution.hpp  SUMOAdapter.hpp  Solution.hpp  Static.hpp
app/include/Static/algos/: AllOrNothing.hpp  ConjugateFrankWolfe.hpp  DijkstraAoN.hpp  FrankWolfe.hpp  IterativeEquilibration.hpp
app/include/Static/supply/: BPRConvexNetwork.hpp  BPRNetwork.hpp  BPRNotConvexNetwork.hpp  CustomNetwork.hpp  Network.hpp  NetworkDifferentiable.hpp
app/include/UI/: Simulator.hpp
app/include/convex/: ConvexSolver.hpp  GoldenSectionSolver.hpp  IntervalSolver.hpp  QuadraticSolver.hpp
app/include/data/: OFormatDemand.hpp  SumoAdapterStatic.hpp  SumoNetwork.hpp  SumoTAZs.hpp
app/include/data/SUMO/: EdgeData.hpp  NetState.hpp  Network.hpp  NetworkTAZ.hpp  Routes.hpp  (+2 more)
app/include/geo/: Coord.hpp
app/include/network/: CreateBPRNetwork.hpp  CreateStaticDemand.hpp  Message.hpp  MessageFactory.hpp  RawSocket.hpp  RequestCreateStaticNetwork.hpp  RunFWSimulation.hpp  Socket.hpp  SumoNetwork.hpp
app/include/opt/: GoldenSectionSolver.hpp  IntervalSolver.hpp  QuadraticGuessSolver.hpp  QuadraticSolver.hpp  SolverWithInitialSolutions.hpp  UnivariateSolver.hpp
app/include/shortest-path/: Dijkstra.hpp  DijkstraCuda.hpp  DijkstraMany.hpp  ShortestPathAll.hpp  ShortestPathManyMany.hpp  ShortestPathOneMany.hpp
app/include/static/: StaticDemand.hpp  StaticProblem.hpp  StaticSolution.hpp
app/include/structs/: BinaryHeap.hpp  BinaryHeapCuda.hpp  PriorityQueue.hpp  PriorityQueueCuda.hpp
app/include/supply/: BPRNetwork.hpp  StaticNetwork.hpp
app/include/utils/: Vector2.hpp  alg.hpp  color_stringifier.hpp  color_stringify.hpp  fdostream.hpp  invertMap.hpp  io.hpp  orderstat.hpp  pipestream.hpp  reference_wrapper.hpp  require_env.hpp  serialize.hpp  shared_ptr.hpp  string.hpp  stringifier.hpp  stringify.hpp  strong_hash.hpp  synchronizer.hpp  timer.hpp  xml.hpp
app/script/: docs-swagger.py  main.cpp
app/script/src/: Server.cpp
app/src/: BPRNetwork.cpp  Dijkstra.cpp  FrankWolfe.cpp  GlobalState.cpp  GoldenSectionSolver.cpp  Graph.cpp  IntervalSolver.cpp  ShortestPathOneMany.cpp  StaticDemand.cpp  StaticNetwork.cpp  StaticSolution.cpp
app/src/Alg/: Graph.cpp
app/src/Com/: HTTPServer.cpp  RunFWSimulation.cpp  Server.cpp  WebSocketServer.cpp
app/src/Dynamic/: Demand.cpp  Environment.cpp  Environment_Loader.cpp  SUMOAdapter.cpp  Vehicle.cpp
app/src/Geo/: Coord.cpp
app/src/Log/: ProgressLogger.cpp  ProgressLoggerIgnore.cpp  ProgressLoggerJsonOStream.cpp  ProgressLoggerTableOStream.cpp
app/src/Opt/: GeneticIntervalSolver.cpp  GeneticSolver.cpp  GoldenSectionSolver.cpp  IntervalSolver.cpp  QuadraticGuessSolver.cpp  QuadraticSolver.cpp
app/src/Static/: Demand.cpp  FixedSolution.cpp  SUMOAdapter.cpp  Solution.cpp
app/src/UI/: Simulator.cpp
app/src/convex/: GoldenSectionSolver.cpp  IntervalSolver.cpp  QuadraticSolver.cpp
app/src/data/: OFormatDemand.cpp  SumoAdapterStatic.cpp  SumoNetwork.cpp  SumoTAZs.cpp
app/src/geo/: Coord.cpp
app/src/network/: CreateBPRNetwork.cpp  CreateStaticDemand.cpp  Message.cpp  MessageFactory.cpp  RawSocket.cpp  RequestCreateStaticNetwork.cpp  RunFWSimulation.cpp  Socket.cpp  SumoNetwork.cpp
app/src/opt/: GoldenSectionSolver.cpp  IntervalSolver.cpp  QuadraticGuessSolver.cpp  QuadraticSolver.cpp
app/src/shortest-path/: Dijkstra.cpp  DijkstraCuda.cu  DijkstraMany.cpp  ShortestPathAll.cpp  ShortestPathManyMany.cpp  ShortestPathOneMany.cpp
app/src/static/: StaticDemand.cpp  StaticSolution.cpp
app/src/supply/: BPRNetwork.cpp  StaticNetwork.cpp
app/src/utils/: Vector2.cpp  color_stringifier.cpp  color_stringify.cpp  io.cpp  pipestream.cpp  require_env.cpp  serialize.cpp  string.cpp  stringifier.cpp  stringify.cpp  strong_hash.cpp  timer.cpp
app/structs/include/: BinaryHeap.hpp  PriorityQueue.hpp
app/test/: main.cpp  test.cpp  test_AllOrNothing.cpp  test_Dijkstra.cpp  test_Dynamic.cpp  test_EdmondsKarp.cpp  test_FrankWolfe.cpp  test_GoldenSectionSolver.cpp  test_Solver.cpp  test_StaticSolution.cpp  test_SumoNetwork.cpp  test_Supply.cpp  test_structs.cpp  test_topological_sort.cpp
(+151 files in other folders)
